Use fatch-h2 instead of node-fetch

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "ecmaFeatures": {
       "spread": true
     },
+    "requireConfigFile": false,
     "sourceType": "module"
   },
   "plugins": [
