--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "TopMonks",
   "license": "MIT",
   "dependencies": {
-    "@material/button": "^12.0.0",
-    "@material/layout-grid": "^12.0.0",
-    "@material/top-app-bar": "^12.0.0",
+    "@material/button": "^11.0.0",
+    "@material/layout-grid": "^11.0.0",
+    "@material/top-app-bar": "^11.0.0",
     "@pulumi/aws": "^4.14.0",
     "@pulumi/awsx": "^0.31.0",
     "@pulumi/pulumi": "^3.9.1",
@@ -20,7 +20,6 @@
     "esbuild": "^0.12.17",
     "lit-html": "2.0.0-rc.3",
     "lodash": "^4.17.21",
-    "node-fetch": "3.0.0-beta.10",
     "parse-duration": "^1.0.0",
     "rxjs": "^7.3.0",
     "yaml": "^1.10.2"
@@ -45,6 +44,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-promise": "^5.1.0",
     "esm": "^3.2.25",
+    "fetch-h2": "^3.0.0",
     "gulp-esbuild": "^0.8.4",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^2.1.1",
