Hookamonk V2 - Images for the Homepage

--- a/www.hookamonk.com/config/path-config.json
+++ b/www.hookamonk.com/config/path-config.json
@@ -31,6 +31,11 @@
     "dest": "assets/img"
   },
 
+  "cloudinary": {
+    "src": "cloudinary",
+    "dest": "hookamonk.com"
+  },
+
   "fonts": {
     "src": "fonts",
     "dest": "fonts"
