--- a/package.json
+++ b/package.json
@@ -6,59 +6,60 @@
   "repository": "git://github.com/topmonks/topmonks-webs.git",
   "author": "TopMonks",
   "license": "MIT",
+  "private": true,
   "dependencies": {
     "@material/button": "^13.0.0",
     "@material/layout-grid": "^13.0.0",
     "@material/top-app-bar": "^13.0.0",
-    "@pulumi/aws": "^4.28.0",
+    "@pulumi/aws": "^4.35.0",
     "@pulumi/awsx": "^0.32.0",
-    "@pulumi/pulumi": "^3.18.0",
-    "@thi.ng/atom": "^5.1.0",
+    "@pulumi/pulumi": "^3.22.1",
+    "@thi.ng/atom": "^5.1.3",
     "@topmonks/pulumi-aws": "^1.10.1",
-    "@types/node": "^16.11.7",
+    "@types/node": "^16.11.21",
     "cheerio": "^1.0.0-rc.10",
-    "esbuild": "^0.14.0",
-    "lit-html": "2.0.2",
+    "esbuild": "^0.14.13",
+    "lit-html": "2.1.1",
     "lodash": "^4.17.21",
     "parse-duration": "^1.0.2",
-    "rxjs": "^7.4.0",
+    "rxjs": "^7.5.2",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/eslint-parser": "^7.16.3",
+    "@babel/core": "^7.16.12",
+    "@babel/eslint-parser": "^7.16.5",
     "@lhci/cli": "^0.8.2",
     "@lhci/utils": "^0.8.2",
-    "@topmonks/blendid": "https://github.com/topmonks/blendid.git#commit=2fde4fbdafc865746494635efe54802b3bf5f0b0",
-    "@types/chart.js": "^2.9.34",
+    "@topmonks/blendid": "https://github.com/topmonks/blendid.git#commit=0c8d44ac157ef4a6d2e74b578ff86b0d03cfca85",
+    "@types/chart.js": "^2.9.35",
     "ava": "^3.15.0",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
-    "dotenv-cli": "^4.1.0",
-    "eslint": "^8.2.0",
+    "dotenv-cli": "^4.1.1",
+    "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ava": "^13.1.0",
+    "eslint-plugin-ava": "^13.2.0",
     "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-promise": "^5.1.1",
+    "eslint-plugin-promise": "^6.0.0",
     "esm": "^3.2.25",
     "fetch-h2": "^3.0.1",
     "gulp-cloudinary-upload": "^3.0.0",
-    "gulp-esbuild": "^0.9.1",
+    "gulp-esbuild": "^0.10.0",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^2.1.1",
     "gulp-mode": "^1.1.0",
     "iconv-lite": "^0.6.3",
     "isomorphic-fetch": "^3.0.0",
-    "lighthouse": "^9.0.0",
+    "lighthouse": "^9.2.0",
     "lighthouse-logger": "^1.3.0",
     "local-web-server": "^5.1.1",
-    "lws": "4.1.0",
+    "lws": "4.1.1",
     "lws-basic-auth": "^2.0.0",
     "lws-blacklist": "^3.0.0",
-    "lws-body-parser": "^2.0.0",
+    "lws-body-parser": "^3.0.0",
     "lws-compress": "^3.1.0",
     "lws-conditional-get": "^2.0.0",
     "lws-cors": "^3.0.0",
@@ -71,13 +72,12 @@
     "lws-rewrite": "^3.1.1",
     "lws-spa": "^4.1.0",
     "lws-static": "^3.1.0",
-    "marked": "^4.0.6",
+    "marked": "^4.0.10",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.1",
     "puppeteer": "^11.0.0",
     "rimraf": "^3.0.2",
-    "sass": "^1.43.4",
-    "stylelint": "^14.1.0",
+    "stylelint": "^14.3.0",
     "stylelint-config-prettier": "^9.0.3",
     "tap-xunit": "^2.4.1"
   },
@@ -140,7 +140,9 @@
     "debug": "4.3.1",
     "lodash": "4.17.21",
     "marky": "1.2.2",
-    "sass": "1.45.0",
     "uuid": "8.3.2"
-  }
+  },
+  "workspaces": [
+    "shared/src"
+  ]
 }
