--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "lighthouse": "^9.2.0",
     "lighthouse-logger": "^1.3.0",
     "local-web-server": "^5.1.1",
-    "lws": "4.1.1",
+    "lws": "=4.1.0",
     "lws-basic-auth": "^2.0.0",
     "lws-blacklist": "^3.0.0",
     "lws-body-parser": "^3.0.0",
