--- a/package.json
+++ b/package.json
@@ -11,44 +11,46 @@
     "@material/button": "^13.0.0",
     "@material/layout-grid": "^13.0.0",
     "@material/top-app-bar": "^13.0.0",
-    "@pulumi/aws": "^4.37.1",
+    "@pulumi/aws": "^4.38.1",
     "@pulumi/awsx": "^0.33.0",
-    "@pulumi/pulumi": "^3.24.1",
-    "@thi.ng/atom": "^5.1.3",
+    "@pulumi/pulumi": "^3.26.1",
+    "@thi.ng/atom": "^5.1.4",
     "@topmonks/pulumi-aws": "^1.10.1",
-    "@types/node": "^16.11.22",
+    "@types/node": "^16.11.26",
     "cheerio": "^1.0.0-rc.10",
-    "esbuild": "^0.14.18",
+    "esbuild": "^0.14.27",
     "esm": "^3.2.25",
-    "lit-html": "2.1.2",
+    "lit-html": "2.2.1",
     "lodash": "^4.17.21",
     "parse-duration": "^1.0.2",
-    "rxjs": "^7.5.2",
+    "rxjs": "^7.5.5",
     "yaml": "^1.10.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.17.0",
+    "@babel/core": "^7.17.7",
     "@babel/eslint-parser": "^7.17.0",
     "@lhci/cli": "^0.8.2",
     "@lhci/utils": "^0.8.2",
-    "@topmonks/blendid": "https://github.com/topmonks/blendid.git#commit=2fc65fbec54d393da05445694a5a10e4f25af80d",
+    "@topmonks/blendid": "https://github.com/topmonks/blendid.git#commit=1b604e5c3808ffe01a7986479f9516737d57248c",
     "ava": "^3.15.0",
+    "browserslist": "^4.20.2",
+    "caniuse-lite": "^1.0.30001317",
     "chalk": "^4.1.2",
     "commander": "^8.3.0",
     "dotenv": "^10.0.0",
     "dotenv-cli": "^4.1.1",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ava": "^13.2.0",
     "eslint-plugin-lit": "^1.6.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^6.0.0",
     "gulp-cloudinary-upload": "^3.0.0",
-    "gulp-esbuild": "^0.10.0",
+    "gulp-esbuild": "^0.10.2",
     "gulp-markdown-to-json": "^1.1.0",
     "gulp-merge-json": "^2.1.1",
     "gulp-mode": "^1.1.0",
-    "lighthouse": "^9.3.1",
+    "lighthouse": "^9.5.0",
     "lighthouse-logger": "^1.3.0",
     "local-web-server": "^5.1.1",
     "lws": "^4.1.1",
@@ -69,10 +71,10 @@
     "lws-static": "^3.1.0",
     "marked": "^4.0.12",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.5.1",
+    "prettier": "^2.6.0",
     "puppeteer": "^11.0.0",
     "rimraf": "^3.0.2",
-    "stylelint": "^14.3.0",
+    "stylelint": "^14.6.0",
     "stylelint-config-prettier": "^9.0.3",
     "tap-xunit": "^2.4.1"
   },
@@ -136,7 +138,8 @@
     "chokidar": "3.5.2",
     "debug": "4.3.1",
     "lodash": "4.17.21",
-    "uuid": "8.3.2"
+    "uuid": "8.3.2",
+    "caniuse-lite": "latest"
   },
   "workspaces": [
     "shared/src"
